--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -2,11 +2,11 @@ html {
     overscroll-behavior: contain;
 }
 body, a {
-    color: var(--text-color);
+    color: #161616;
 }
 .visually-hidden {
     display: none;
 }
 .card-category, .section-tagline {
-    color: var(--color-primary);
+    color: #D73953;
 }
